welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: not found: value nbBicuit
while (nbBicuit != 4) {
       ^