welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit:Int = 0
while (nbBicuit != 4) {
	while (estSurBiscuit()==false) {
  	avance()
	};
	nbBiscuit = nbBiscuit + 1;
}